force-app/main/default/objects/Equipement_du_foyer_de_l_individu__c/Equipement_du_foyer_de_l_individu__c.object-meta.xml
<CustomObject>
    <label>Équipement du foyer de l&apos;individu</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de É</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Équipements du foyer des individus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>