force-app/main/default/objects/Equipement_du_foyer_de_l_individu__c/fields/Composition_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Composition_du_foyer__c</fullName>
    <label>Composition du foyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Équipements du foyer des individus</relationshipLabel>
    <relationshipName>Equipements_du_foyer_des_individus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>