force-app/main/default/objects/Equipement_du_foyer_de_l_individu__c/fields/Equipement_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Equipement_du_foyer__c</fullName>
    <label>Équipement du foyer</label>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipLabel>Équipements du foyer des individus</relationshipLabel>
    <relationshipName>Equipements_du_foyer_des_individus</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>