force-app/main/default/objects/Equipement_du_foyer_de_l_individu__c/fields/Nom_Composition_Foyer__c.field-meta.xml
<CustomField>
    <fullName>Nom_Composition_Foyer__c</fullName>
    <formula>Composition_du_foyer__r.FirstName + &apos; &apos; +  Composition_du_foyer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Composition Foyer</label>
    <type>Text</type>
</CustomField>