force-app/main/default/objects/Equipement_du_foyer_de_l_individu__c/fields/Utilisation_de_l_equipement__c.field-meta.xml
<CustomField>
    <fullName>Utilisation_de_l_equipement__c</fullName>
    <label>Utilisation de l&apos;équipement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
                <default>true</default>
                <label>Non</label>
            </value>
            <value>
                <fullName>Oui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>